casi terminado el front

--- a/client/src/components/cards/cards.module.css
+++ b/client/src/components/cards/cards.module.css
@@ -1,5 +1,13 @@
 .Cards{
     display: flex;
     flex-wrap: wrap;
-    margin-left: 8vh;
+    justify-content: space-around;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-top: 30px;
+    /* background-color: rgb(253, 231, 231); */
+    border-radius: 15px;
+    
 }
+
+
