--- a/client/src/components/card/card.module.css
+++ b/client/src/components/card/card.module.css
@@ -1,71 +1,228 @@
+
+
 .Card{
-    display: flex;
-    flex-direction: column;
-    position: relative;
-    justify-content: center;
-    align-items: center;
-    background-image: url(../../assets/images/fondoCards.PNG);
-    background-size: cover;
-    padding: 10vh;
-    height: 30vh;
-    width: 10vw;
-    border: solid black; 
-    margin: 10vh;
-    margin: 2vh;
+   
+height: 400px;
+    width: 400px;
+    margin: 40px;
+border-style: outset;
+
 }
 
 
-.image{
-    position: absolute;
-    top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-    width: 300px;
-        /* Cambia este valor para aumentar o disminuir el tamaño */
-        height: 300px;
-        z-index: auto;
-}
 
+.name{font-size: 25px;
+font-family:inherit;
+background-color: rgb(247, 242, 242);
+
+border-radius: 0% 4vh;
+margin-top: 3vh;
+padding-left: 3vh;
+padding-right: 5vh;
+margin-right: 170px;
+}
 
 .type{
-    z-index: 1;
+ height: 100px;
+align-self:auto;
+
+}
+
+.divImagen {
+background-image: url(../../assets/images/giphy.gif);
+/* background-color: rgb(192, 192, 192); */
+display: flex;
+flex-direction: column;
+align-items: center;
+height: 400px;
+
 }
 
 
-.name{
-    z-index: 9;
-}
-
-
-
-.Card1 {
+.contenedorType {
+   
+    background-color: rgb(255, 255, 255);
     display: flex;
-    flex-direction: column;
-    position: relative;
-    justify-content: center;
+    justify-content: flex-end;
     align-items: center;
-    background-color: black;
-    background-size: cover;
-    padding: 10vh;
-    height: 30vh;
-    width: 10vw;
-    border: solid rgb(19, 214, 149);
-    margin: 10vh;
-    margin: 2vh;
+    padding: 10px;
+    width: 380px;
 }
 
-.Card2 {
-    display: flex;
-    flex-direction: column;
-    position: relative;
-    justify-content: center;
-    align-items: center;
-    background-color: rgb(230, 18, 18);
-    background-size: cover;
-    padding: 10vh;
-    height: 30vh;
-    width: 10vw;
-    border: solid black;
-    margin: 10vh;
-    margin: 2vh;
+
+
+
+img{
+    height: 200px;
+    
+}
+
+
+
+.fire {
+height: 400px;
+    width: 400px;
+    margin: 25px;
+    border-style: outset;
+    border-color:#f08030;
+    box-shadow: 7px 5px 5px #f08030
+
+}
+
+
+
+.water {
+height: 400px;
+    width: 400px;
+margin: 25px;
+    border-style: outset;
+    border-color:#6890f0;
+    box-shadow: 7px 5px 5px #6890f0
+
+}
+
+.normal{
+    height: 400px;
+        width: 400px;
+        margin: 25px;
+        border-style: outset;
+        border-color: #a8a878;
+        box-shadow: 7px 5px 5px #a8a878
+}
+
+.poison{
+    height: 400px;
+        width: 400px;
+    margin: 25px;
+        border-style: outset;
+        border-color: #a040a0;
+        box-shadow: 7px 5px 5px #a040a0
+}
+
+.electric{
+    height: 400px;
+        width: 400px;
+    margin: 25px;
+        border-style: outset;
+        border-color: #f8d030;
+        box-shadow: 7px 5px 5px #f8d030
+}
+
+
+.rock{
+height: 400px;
+    width: 400px;
+    margin: 25px;
+    border-style: outset;
+    border-color: #b8a038;
+    box-shadow: 7px 5px 5px #b8a038
+
+}
+
+.ice {
+    height: 400px;
+    width: 400px;
+    margin: 25px;
+    border-style: outset;
+    border-color: #98d8d8;
+    box-shadow: 7px 5px 5px #98d8d8
+}
+
+.dragon {
+    height: 400px;
+    width: 400px;
+margin: 25px;
+    border-style: outset;
+    border-color: #7038f8;
+    box-shadow: 7px 5px 5px #7038f8
+}
+
+.psychic {
+    height: 400px;
+    width: 400px;
+margin: 25px;
+    border-style: outset;
+    border-color: #f85888;
+    box-shadow: 7px 5px 5px #f85888
+}
+
+.grass{
+    height: 400px;
+    width: 400px;
+margin: 25px;
+    border-style: outset;
+    border-color: #78c850;
+    box-shadow: 7px 5px 5px #78c850
+}
+
+.bug {
+    height: 400px;
+    width: 400px;
+    margin: 25px;
+    border-style: outset;
+    border-color: #a8b820;
+    box-shadow: 7px 5px 5px #a8b820
+}
+
+.fairy {
+    height: 400px;
+    width: 400px;
+margin: 25px;
+    border-style: outset;
+    border-color: #f0b6bc;
+    box-shadow: 7px 5px 5px #f0b6bc
+}
+
+.dark {
+    height: 400px;
+    width: 400px;
+    margin: 25px;
+    border-style: outset;
+    border-color: #705848;
+    box-shadow: 7px 5px 5px #705848
+}
+
+.ghost {
+    height: 400px;
+    width: 400px;
+margin: 25px;
+    border-style: outset;
+    border-color: #705898;
+    box-shadow: 7px 5px 5px #705898
+}
+
+.ground {
+    height: 400px;
+    width: 400px;
+    margin: 25px;
+    border-style: outset;
+    border-color: #e0c068;
+    box-shadow: 7px 5px 5px #e0c068
+}
+
+.fighting {
+    height: 400px;
+    width: 400px;
+    margin: 25px;
+    border-style: outset;
+    border-color: #c03028;
+    box-shadow: 7px 5px 5px #c03028
+}
+
+.flying {
+    height: 400px;
+    width: 400px;
+    margin: 25px;
+    border-style: outset;
+    border-color: #a890f0;
+    box-shadow: 7px 5px 5px #a890f0
+}
+
+.steel {
+    height: 400px;
+    width: 400px;
+    margin: 25px;
+    border-style: outset;
+    border-color: #b8b8d0;
+    box-shadow: 7px 5px 5px #b8b8d0
 }
