--- a/client/src/components/filter/filter.module.css
+++ b/client/src/components/filter/filter.module.css
@@ -1,3 +1,7 @@
 .filtros{
-    background-color: aqua;
+    background-color: rgb(250, 237, 237);
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
