--- a/client/src/views/createForm/createPokemon.module.css
+++ b/client/src/views/createForm/createPokemon.module.css
@@ -1,45 +1,99 @@
-.container{background-image: url(../../assets/images/backgroundHome.jpg);
-   height: 100%;
-   width: 100%;
-   display: flex;
-   justify-content: space-around;
-   align-items: center;
- 
+.container{background-image: url(../../assets/images/backgroundForm.jpg);
+background-repeat: no-repeat;
+background-size: cover;
+position: fixed;
+height: 100%;
+    width: 100%;
 }
 
-h6 {margin: 1px;}
 
-.form{ display: flex;
-    justify-content: center;
-    align-content: center;
-    height: 500px;
-    width: 500px;
-    background-color: rgb(253, 161, 161);
-    padding: 60px;
-    margin-top: 20px;
-    margin-bottom: 30px;
+
+
+
+.Form{
+   
+    /* background-color: aqua; */
+    height: auto;
+    margin: 10px;
+    justify-content: space-evenly;
+    align-items: center;
+    display: flex;
+
+}
+
+.Preview{
+    background-color: rgb(23, 66, 52);
+    height: 100vh;
+   
+}
+
+.submit{
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    ;
+}
+
+.tittle{font-family: inherit;
+    font-size: 30px;
+align-self: center;}
+
+.typeTittle{
+    font-family: inherit;
+        font-size: 20px;
+        align-self: center;
+        margin-bottom: 5px;
+    
+        
+}
+
+label{
+font-family: inherit;
+    font-size: 13px;
     
 }
 
-.form2{
-    display: flex;
-        justify-content: center;
-        align-content: center;
-        height: 35vh;
-        width: 60vh;
-        background-color: rgb(0, 0, 0);
-        margin-left: 90px;
-}
 
 
-.allTypes{
+.inputsContainer {
+  
+margin-top: 40px;
     display: flex;
-    justify-content: space-between;
-    background-color: yellow;
-    height: 150px;
-    width: 500px;
+    flex-direction: column;
+max-height: 540px;
+
+    justify-content: center;
+    background-color:#FAEBD7;
     padding: 30px;
+    height: auto;
+    border-radius: 30px;
+box-shadow: 1px 1px 10px 1px black;
+   
 }
+
+.inputsContainer p{
+    font-size: 10px;
+    color: red;
+    margin: 0px;
+    align-self: center;
+}
+
+
+.allTypes {
+    display: flex;
+    justify-content:space-around;
+    height: 135px;
+    width: 300px;
+    padding: 15px;
+    margin-top: -15px;
+    border-style: outset;
+    border-color: transparent #ff0400 #fd0804 transparent;
+    margin-bottom:15px ;
+    
+  
+}
+
+
 
 
 .div1{
@@ -69,8 +123,8 @@ h6 {margin: 1px;}
 }
 
 
-.inputsContainer{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
+
+
+
+
+
