--- a/client/src/components/card/card.module.css
+++ b/client/src/components/card/card.module.css
@@ -30,6 +30,7 @@ align-self:auto;
 
 .divImagen {
 background-image: url(../../assets/images/giphy.gif);
+background-color:antiquewhite;
 /* background-color: rgb(192, 192, 192); */
 display: flex;
 flex-direction: column;
