--- a/client/src/components/filter/filter.module.css
+++ b/client/src/components/filter/filter.module.css
@@ -5,3 +5,9 @@
     justify-content: center;
     align-items: center;
 }
+
+
+.select option:checked {
+    background-color: rgb(250, 142, 142);
+   
+}
