--- a/client/src/components/card/card.module.css
+++ b/client/src/components/card/card.module.css
@@ -11,6 +11,7 @@ border-style: outset;
 
 
 
+
 .name{font-size: 25px;
 font-family:inherit;
 background-color: rgb(247, 242, 242);
@@ -66,11 +67,19 @@ height: 400px;
     margin: 25px;
     border-style: outset;
     border-color:#f08030;
-    box-shadow: 7px 5px 5px #f08030
+    box-shadow: 7px 5px 5px #f08030;
+    transition: transform 0.5s ease;
+   
+    
 
 }
 
-
+.fire:hover{
+    scale: 1.1;
+transform: translateY(10px);
+transition: 0.3s;
+   
+}
 
 .water {
 height: 400px;
@@ -79,6 +88,13 @@ margin: 25px;
     border-style: outset;
     border-color:#6890f0;
     box-shadow: 7px 5px 5px #6890f0
+
+}
+
+.water:hover {
+    scale: 1.1;
+    transform: translateY(10px);
+    transition: 0.3s;
 
 }
 
@@ -91,6 +107,13 @@ margin: 25px;
         box-shadow: 7px 5px 5px #a8a878
 }
 
+
+.normal:hover {
+    scale: 1.1;
+    transform: translateY(10px);
+    transition: 0.3s;
+
+}
 .poison{
     height: 400px;
         width: 400px;
@@ -98,6 +121,13 @@ margin: 25px;
         border-style: outset;
         border-color: #a040a0;
         box-shadow: 7px 5px 5px #a040a0
+}
+
+.poison:hover {
+    scale: 1.1;
+    transform: translateY(10px);
+    transition: 0.3s;
+
 }
 
 .electric{
@@ -109,6 +139,12 @@ margin: 25px;
         box-shadow: 7px 5px 5px #f8d030
 }
 
+.electric:hover {
+    scale: 1.1;
+    transform: translateY(10px);
+    transition: 0.3s;
+
+}
 
 .rock{
 height: 400px;
@@ -117,6 +153,13 @@ height: 400px;
     border-style: outset;
     border-color: #b8a038;
     box-shadow: 7px 5px 5px #b8a038
+
+}
+
+.rock:hover {
+    scale: 1.1;
+    transform: translateY(10px);
+    transition: 0.3s;
 
 }
 
@@ -129,6 +172,14 @@ height: 400px;
     box-shadow: 7px 5px 5px #98d8d8
 }
 
+.ice:hover {
+    scale: 1.1;
+    transform: translateY(10px);
+    transition: 0.3s;
+
+}
+
+
 .dragon {
     height: 400px;
     width: 400px;
@@ -136,6 +187,13 @@ margin: 25px;
     border-style: outset;
     border-color: #7038f8;
     box-shadow: 7px 5px 5px #7038f8
+}
+
+.dragon:hover {
+    scale: 1.1;
+    transform: translateY(10px);
+    transition: 0.3s;
+
 }
 
 .psychic {
@@ -147,6 +205,13 @@ margin: 25px;
     box-shadow: 7px 5px 5px #f85888
 }
 
+.psychic:hover {
+    scale: 1.1;
+    transform: translateY(10px);
+    transition: 0.3s;
+
+}
+
 .grass{
     height: 400px;
     width: 400px;
@@ -154,6 +219,13 @@ margin: 25px;
     border-style: outset;
     border-color: #78c850;
     box-shadow: 7px 5px 5px #78c850
+}
+
+.grass:hover {
+    scale: 1.1;
+    transform: translateY(10px);
+    transition: 0.3s;
+
 }
 
 .bug {
@@ -165,6 +237,13 @@ margin: 25px;
     box-shadow: 7px 5px 5px #a8b820
 }
 
+.bug:hover {
+    scale: 1.1;
+    transform: translateY(10px);
+    transition: 0.3s;
+
+}
+
 .fairy {
     height: 400px;
     width: 400px;
@@ -173,6 +252,15 @@ margin: 25px;
     border-color: #f0b6bc;
     box-shadow: 7px 5px 5px #f0b6bc
 }
+
+.fairy:hover {
+    scale: 1.1;
+    transform: translateY(10px);
+    transition: 0.3s;
+
+}
+
+
 
 .dark {
     height: 400px;
@@ -183,6 +271,12 @@ margin: 25px;
     box-shadow: 7px 5px 5px #705848
 }
 
+.dark:hover {
+    scale: 1.1;
+    transform: translateY(10px);
+    transition: 0.3s;
+
+}
 .ghost {
     height: 400px;
     width: 400px;
@@ -190,6 +284,13 @@ margin: 25px;
     border-style: outset;
     border-color: #705898;
     box-shadow: 7px 5px 5px #705898
+}
+
+.ghost:hover {
+    scale: 1.1;
+    transform: translateY(10px);
+    transition: 0.3s;
+
 }
 
 .ground {
@@ -201,6 +302,14 @@ margin: 25px;
     box-shadow: 7px 5px 5px #e0c068
 }
 
+.ground:hover {
+    scale: 1.1;
+    transform: translateY(10px);
+    transition: 0.3s;
+
+}
+
+
 .fighting {
     height: 400px;
     width: 400px;
@@ -208,6 +317,13 @@ margin: 25px;
     border-style: outset;
     border-color: #c03028;
     box-shadow: 7px 5px 5px #c03028
+}
+
+.fighting:hover {
+    scale: 1.1;
+    transform: translateY(10px);
+    transition: 0.3s;
+
 }
 
 .flying {
@@ -219,6 +335,13 @@ margin: 25px;
     box-shadow: 7px 5px 5px #a890f0
 }
 
+.flying:hover {
+    scale: 1.1;
+    transform: translateY(10px);
+    transition: 0.3s;
+
+}
+
 .steel {
     height: 400px;
     width: 400px;
@@ -226,4 +349,11 @@ margin: 25px;
     border-style: outset;
     border-color: #b8b8d0;
     box-shadow: 7px 5px 5px #b8b8d0
+}
+
+.steel:hover {
+    scale: 1.1;
+    transform: translateY(10px);
+    transition: 0.3s;
+
 }
