--- a/client/src/views/homePage/homePage.module.css
+++ b/client/src/views/homePage/homePage.module.css
@@ -1,22 +1,100 @@
 .home{
-    /* background-color: rgb(255, 255, 255); */
-    background-image: url(../../assets/images/backgroundHome.jpg);
+    background-color:#961E1D;
+   
 
 
   
+.loading{
+    position: relative;
+    right: 600px;
+    display: flex;
+}
+
+}
+.loading img{
+    height: 80px;
+   
+    
+}
+
+.loading p{
+    color: yellow;
+    font-size: 30px;
+   
 }
 
 
 
 
-.paginado{display: flex;
+
+.containerPaginado{
+display: flex;
 justify-content: center;
+align-items: center;
 border: none;
 margin-top: 10px;
+height: 60px;
+background-color: #961E1D;
+
+
+
 }
+
+.containerPaginado .carga{
+    height: 100%;
+    width: 100%;
+  
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  
+}
+
+.containerPaginado .carga .loading {
+   width: auto;
+ position: relative;
+ right: 100px;
+
+}
+
+
+.containerPaginado .buttons{
+    background-color:#961E1D;
+    height: 100%;
+    width: 100%;
+    align-items: center;
+    display: flex;
+    
+}
+
+
+
+
 
 .back{
-    margin-right: 30px;
-    padding: 6px;
+    margin-left: -60px;
+height: 50px;
 
 }
+
+
+.back:hover {
+    scale: 1.1;
+    
+}
+
+
+.next:hover{
+    scale: 1.1;
+}
+
+
+
+.next {
+   height: 50px;
+
+}
+
+
+
+
