--- a/client/src/views/createForm/createPokemon.module.css
+++ b/client/src/views/createForm/createPokemon.module.css
@@ -1,4 +1,5 @@
-.container{background-image: url(../../assets/images/backgroundForm.jpg);
+.container{background-image: url(../../assets/images/back8-01.png);
+    
 background-repeat: no-repeat;
 background-size: cover;
 position: fixed;
