--- a/client/src/components/card/card.module.css
+++ b/client/src/components/card/card.module.css
@@ -7,6 +7,7 @@ height: 400px;
     margin: 40px;
 border-style: outset;
 
+
 }
 
 
@@ -14,10 +15,10 @@ border-style: outset;
 
 .name{font-size: 25px;
 font-family:inherit;
-background-color: rgb(247, 242, 242);
-
+background-color: #951E1D;
+color: white;
 border-radius: 0% 4vh;
-margin-top: 3vh;
+margin-top: 1px;
 padding-left: 3vh;
 padding-right: 5vh;
 margin-right: 170px;
@@ -45,7 +46,7 @@ height: 400px;
    
     background-color: rgb(255, 255, 255);
     display: flex;
-    justify-content: flex-end;
+ justify-content: center;
     align-items: center;
     padding: 10px;
     width: 380px;
@@ -55,7 +56,9 @@ height: 400px;
 
 
 img{
+    margin-top: 10px;
     height: 200px;
+   
     
 }
 
@@ -78,6 +81,7 @@ height: 400px;
     scale: 1.1;
 transform: translateY(10px);
 transition: 0.3s;
+
    
 }
 
