--- a/client/src/components/navBar/navBar.module.css
+++ b/client/src/components/navBar/navBar.module.css
@@ -7,7 +7,11 @@
 
 .pokemon{font-family:PocketMonk-15ze;
 font-size: 55px;
-color: #B52B25;}
+color: #B52B25;
+;}
+.pokemon:hover {
+scale:1.1;
+}
 
 
 .navLink {
