--- a/client/src/views/landinPage/landinPage.module.css
+++ b/client/src/views/landinPage/landinPage.module.css
@@ -18,8 +18,8 @@
 
 background-color: #ffffff;
 
-    height: 550px;
-    width: 1000px;
+    height: 70%;
+    width: 70%;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 20px 20px 10px rgba(0, 0, 0, 0.2);
@@ -28,46 +28,159 @@ background-color: #ffffff;
 
 
 
+@media (min-width: 0px) and (max-width:820px) {
+    .containerHome{
+        height: 70%;
+        flex-direction: column;
+    
+    }
+}
+
 
 
 
 .left h1 {
-    margin-top: 70px;
-font-size: 50px;
+
+font-size: 350%;
 color: #961E1D;
 text-align: center;
 
+
+}
+
+@media (min-width: 0px) and (max-width:449px) {
+    .left h1 {
+        font-size: 200%;
+    }
+
+}
+
+
+
+
+@media (min-width: 450px) and (max-width:820px){
+.left h1{
+    font-size: 300%;
+}
+
+}
+
+@media (min-width: 820px) and (max-width:1200px){
+    .left h1 {
+    
+            font-size: 350%;
+        }
+}
+
+.left{
+    width: 50%;
+    display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+}
+
+@media (min-width: 0px) and (max-width:820px){
+    .left{
+        width: 100%;
+        height: 60%;
+     
+    }
+}
+
+
+@media (min-width: 450px) and (max-width:820px) {
+    .right {
+        margin-top: 170px;
+       color: aliceblue;
+       height: 25%;
+    display: block;
+    }
+}
+
+
+@media (min-width: 819px) and (max-width:1200px) {
+    .right {
+margin-top: 10%;
+       height: 60%;
+    }
+}
+
+@media (min-width: 0px) and (max-width:449px) {
+    .right {
+        margin-top: 100px;
+        color: aliceblue;
+        height: 25%;
+    }
 }
 
 
 
 .right{
-    background-color: transparent;
-    width: 500px;
+    
+    width: 50%;
+    display: flex;
+        align-items: center;
+        justify-content: center;
+
+     
+        
 }
 
 
 .right img{
-    height: 750px;
-    overflow: auto;
+display: block;
+    height: 130%;
+    margin-left: 30%;
+    margin-bottom: 10%;
+    /* overflow: auto; */
     background-color: transparent;
-position: relative;
-right: 350px;
-bottom: 130px;
+/* position: relative;
+right: 50%;
+bottom: 20%; */
 z-index: 0;
 
 }
 
-
-.tecnologies{
-    display: flex;
+@media (min-width: 0px) and (max-width:819px) {
+.right img {
+        margin-left: 100%;
+        height: 170%;
+       margin-bottom: 120%;
+    }
 }
 
 
+@media (min-width: 819px) and (max-width:1200px){
+    .right img {
+        margin-left: 60%;
+    height: 200%;
+        }
+}
+
+
+.tecnologies {
+    display: flex;
+   /* background-color: #951E1D; */
+   justify-content: center;
+   align-items: center;
+   width: 100%;
+  height: 30%;
+  
+}
+
+@media (min-width: 0px) and (max-width:819px) {
+    .tecnologies  {
+       height: 35%;
+       width: 20%;
+    }
+
+}
+
 .tecnologiesLogo{
-    margin-top: 40px;
-    height: 90px;
-    margin-left: 10px;
+    
+    height: 40%;
+    margin-left: 3%;
 }
 
 
@@ -81,12 +194,35 @@ padding: 1em 2em;
     text-transform: uppercase;
     color: #951E1D;
     transition: all 1000ms;
-    font-size: 15px;
+    font-size: 120%;
     position: relative;
     overflow: hidden;
     outline: 2px solid #951E1D;
     z-index: 1;
   
+}
+
+
+@media (min-width: 0px) and (max-width:450px) {
+.left button {
+        font-size: 70%;
+    }
+}
+
+@media (min-width: 451px) and (max-width:819px){
+    .left button{
+        position: relative;
+        top: 40;
+    }
+}
+
+
+
+@media (min-width: 820px) and (max-width:1200px){
+    .left button{
+        font-size: 120%;
+    }
+    
 }
 
 .left button:hover {
@@ -115,8 +251,8 @@ color: #ffffff;
     width: 250%;
 }
 
-
+/* 
 .botonR{
     margin-left: 140px;
-}
+} */
 
